--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
       background-color: #1b1b1b;
     }
   </style>
-  <script src="../p5.min.js"></script>
-  <!-- <script src="../addons/p5.sound.js"></script> -->
+  <script src="/p5.min.js"></script>
+  <script src="/p5.sound.js"></script>
+  <!-- <script src="path/to/p5.sound.js"></script> -->
   <script src="sketch.js"></script>
 </head>
 
